--- a/MyRallyApp/en.lproj/MainStoryboard.storyboard
+++ b/MyRallyApp/en.lproj/MainStoryboard.storyboard
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="uKk-gt-UUE">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="1QT-Rc-IZ3">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
-        <scene sceneID="YfZ-OF-e6I">
+        <scene sceneID="zt3-J5-Emd">
             <objects>
-                <navigationController definesPresentationContext="YES" id="uKk-gt-UUE" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="tPP-VF-XdH">
+                <navigationController definesPresentationContext="YES" navigationBarHidden="YES" id="1QT-Rc-IZ3" sceneMemberID="viewController">
+                    <nil key="simulatedTopBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="5Xh-ck-Apq">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="2" kind="relationship" relationship="rootViewController" id="C0x-MK-KN5"/>
+                        <segue destination="2" kind="relationship" relationship="rootViewController" id="b0n-r2-k8h"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ePS-uV-Ald" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cxt-75-UfA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-354" y="249"/>
+            <point key="canvasLocation" x="-379" y="260"/>
         </scene>
         <!--Login Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="RALoginController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5I9-j4-NCa">
@@ -55,7 +56,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="o1S-Ea-BuF" kind="push" id="hdF-pp-a9q"/>
+                                    <action selector="loginTapped:" destination="2" eventType="touchUpInside" id="YSo-hN-8h6"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -84,24 +85,32 @@
         <!--Stories View Controller-->
         <scene sceneID="bWc-JV-Fgq">
             <objects>
-                <viewController id="o1S-Ea-BuF" customClass="StoriesViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="myStories" id="o1S-Ea-BuF" customClass="StoriesViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5A5-IC-Z2Y">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="6Wn-sh-5zt">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="1HV-ko-z9e"/>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yIx-2G-y6A">
+                                <items>
+                                    <navigationItem title="My Stories" id="4ke-OF-aRO"/>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="1HV-ko-z9e" firstAttribute="centerY" secondItem="6Wn-sh-5zt" secondAttribute="centerY" type="default" id="4r3-F7-DPH"/>
+                            <constraint firstItem="yIx-2G-y6A" firstAttribute="leading" secondItem="5A5-IC-Z2Y" secondAttribute="leading" type="default" id="1WO-fY-NKw"/>
                             <constraint firstItem="6Wn-sh-5zt" firstAttribute="trailing" secondItem="5A5-IC-Z2Y" secondAttribute="trailing" type="default" id="CG4-3D-o0f"/>
+                            <constraint firstItem="6Wn-sh-5zt" firstAttribute="top" secondItem="yIx-2G-y6A" secondAttribute="bottom" type="default" id="HeA-4a-3QB"/>
+                            <constraint firstItem="yIx-2G-y6A" firstAttribute="trailing" secondItem="5A5-IC-Z2Y" secondAttribute="trailing" type="default" id="IIt-hd-bNr"/>
+                            <constraint firstItem="yIx-2G-y6A" firstAttribute="top" secondItem="5A5-IC-Z2Y" secondAttribute="top" type="default" id="U29-Rm-XqB"/>
+                            <constraint firstItem="1HV-ko-z9e" firstAttribute="centerY" secondItem="5A5-IC-Z2Y" secondAttribute="centerY" type="default" id="XjN-xm-Q4l"/>
                             <constraint firstItem="6Wn-sh-5zt" firstAttribute="bottom" secondItem="5A5-IC-Z2Y" secondAttribute="bottom" type="default" id="YHT-fT-y7s"/>
-                            <constraint firstItem="1HV-ko-z9e" firstAttribute="centerX" secondItem="6Wn-sh-5zt" secondAttribute="centerX" type="default" id="m7W-zp-hGa"/>
-                            <constraint firstItem="6Wn-sh-5zt" firstAttribute="top" secondItem="5A5-IC-Z2Y" secondAttribute="top" type="default" id="pU2-bX-Inr"/>
                             <constraint firstItem="6Wn-sh-5zt" firstAttribute="leading" secondItem="5A5-IC-Z2Y" secondAttribute="leading" type="default" id="w1Q-nD-3D0"/>
+                            <constraint firstItem="yIx-2G-y6A" firstAttribute="centerX" secondItem="1HV-ko-z9e" secondAttribute="centerX" type="default" id="zxQ-mv-hfL"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="jWl-qv-0ii"/>
@@ -112,7 +121,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2iY-Mo-RpU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="646" y="231"/>
+            <point key="canvasLocation" x="518" y="243"/>
         </scene>
     </scenes>
     <classes>
@@ -121,6 +130,9 @@
         </class>
         <class className="RALoginController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/RALoginController.h"/>
+            <relationships>
+                <relationship kind="action" name="loginTapped:"/>
+            </relationships>
         </class>
         <class className="StoriesViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/StoriesViewController.h"/>
