--- a/MyRallyApp/en.lproj/MainStoryboard.storyboard
+++ b/MyRallyApp/en.lproj/MainStoryboard.storyboard
@@ -7,8 +7,7 @@
         <!--Navigation Controller-->
         <scene sceneID="zt3-J5-Emd">
             <objects>
-                <navigationController definesPresentationContext="YES" navigationBarHidden="YES" id="1QT-Rc-IZ3" sceneMemberID="viewController">
-                    <nil key="simulatedTopBarMetrics"/>
+                <navigationController definesPresentationContext="YES" id="1QT-Rc-IZ3" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="5Xh-ck-Apq">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -20,12 +19,12 @@
             </objects>
             <point key="canvasLocation" x="-379" y="260"/>
         </scene>
-        <!--Login Controller-->
+        <!--Login Controller - Login-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="RALoginController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5I9-j4-NCa">
@@ -56,7 +55,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="loginTapped:" destination="2" eventType="touchUpInside" id="YSo-hN-8h6"/>
+                                    <segue destination="o1S-Ea-BuF" kind="push" id="9aS-K6-gQK"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -77,43 +76,38 @@
                             <constraint firstItem="crp-w3-OG5" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="t2x-Ou-Omg"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="3Kc-tz-psH"/>
+                    <navigationItem key="navigationItem" title="Login" id="3Kc-tz-psH"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="71" y="243"/>
         </scene>
-        <!--Stories View Controller-->
+        <!--Stories View Controller - My Stories-->
         <scene sceneID="bWc-JV-Fgq">
             <objects>
                 <viewController storyboardIdentifier="myStories" id="o1S-Ea-BuF" customClass="StoriesViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5A5-IC-Z2Y">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="6Wn-sh-5zt">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="320" id="9jT-rY-g9E"/>
+                                </constraints>
                             </tableView>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="1HV-ko-z9e"/>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yIx-2G-y6A">
-                                <items>
-                                    <navigationItem title="My Stories" id="4ke-OF-aRO"/>
-                                </items>
-                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="yIx-2G-y6A" firstAttribute="leading" secondItem="5A5-IC-Z2Y" secondAttribute="leading" type="default" id="1WO-fY-NKw"/>
-                            <constraint firstItem="6Wn-sh-5zt" firstAttribute="trailing" secondItem="5A5-IC-Z2Y" secondAttribute="trailing" type="default" id="CG4-3D-o0f"/>
-                            <constraint firstItem="6Wn-sh-5zt" firstAttribute="top" secondItem="yIx-2G-y6A" secondAttribute="bottom" type="default" id="HeA-4a-3QB"/>
-                            <constraint firstItem="yIx-2G-y6A" firstAttribute="trailing" secondItem="5A5-IC-Z2Y" secondAttribute="trailing" type="default" id="IIt-hd-bNr"/>
-                            <constraint firstItem="yIx-2G-y6A" firstAttribute="top" secondItem="5A5-IC-Z2Y" secondAttribute="top" type="default" id="U29-Rm-XqB"/>
-                            <constraint firstItem="1HV-ko-z9e" firstAttribute="centerY" secondItem="5A5-IC-Z2Y" secondAttribute="centerY" type="default" id="XjN-xm-Q4l"/>
-                            <constraint firstItem="6Wn-sh-5zt" firstAttribute="bottom" secondItem="5A5-IC-Z2Y" secondAttribute="bottom" type="default" id="YHT-fT-y7s"/>
-                            <constraint firstItem="6Wn-sh-5zt" firstAttribute="leading" secondItem="5A5-IC-Z2Y" secondAttribute="leading" type="default" id="w1Q-nD-3D0"/>
-                            <constraint firstItem="yIx-2G-y6A" firstAttribute="centerX" secondItem="1HV-ko-z9e" secondAttribute="centerX" type="default" id="zxQ-mv-hfL"/>
+                            <constraint firstItem="6Wn-sh-5zt" firstAttribute="leading" secondItem="5A5-IC-Z2Y" secondAttribute="leading" constant="-6" id="2vF-0a-YS7"/>
+                            <constraint firstItem="1HV-ko-z9e" firstAttribute="centerY" secondItem="6Wn-sh-5zt" secondAttribute="centerY" type="default" id="6dV-Tg-p2J"/>
+                            <constraint firstItem="6Wn-sh-5zt" firstAttribute="top" secondItem="5A5-IC-Z2Y" secondAttribute="top" type="default" id="E6i-md-BRC"/>
+                            <constraint firstItem="6Wn-sh-5zt" firstAttribute="bottom" secondItem="5A5-IC-Z2Y" secondAttribute="bottom" type="default" id="cHL-Qc-P2T"/>
+                            <constraint firstItem="1HV-ko-z9e" firstAttribute="centerX" secondItem="5A5-IC-Z2Y" secondAttribute="centerX" type="default" id="xcL-C5-9cv"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="jWl-qv-0ii"/>
+                    <navigationItem key="navigationItem" title="My Stories" id="jWl-qv-0ii"/>
                     <connections>
                         <outlet property="loadingIndicator" destination="1HV-ko-z9e" id="e9a-jO-0Ie"/>
                         <outlet property="storiesTable" destination="6Wn-sh-5zt" id="YUl-yq-Zhd"/>
@@ -130,9 +124,6 @@
         </class>
         <class className="RALoginController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/RALoginController.h"/>
-            <relationships>
-                <relationship kind="action" name="loginTapped:"/>
-            </relationships>
         </class>
         <class className="StoriesViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/StoriesViewController.h"/>
